syntax = "proto3";

package myservice;

option go_package = "../gen;ssov1";

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
}

message RegisterRequest {
  string userName = 1;
  bytes password = 2;
  string name = 3;
  string surname = 4;
  string department = 5;
  string rank = 6;
  string email = 7;
}

message RegisterResponse {
  string userName = 1;
}

message LoginRequest {
  string userName = 1;
  bytes password = 2;
}

message LoginResponse {
  string token = 1;
}
